--- a/index.html
+++ b/index.html
@@ -5,19 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Connor Sicheri - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Website!</h1>
-        <p>Here you will find my coursework, projects, and blog.</p>
+        <div class="container">
+            <h1>Connor Sicheri</h1>
+            <nav>
+                <ul>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#projects">Projects</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
-    
-    <section id="about">
-        <h2>About Me</h2>
-        <p>I am a machine learning researcher and computer science enthusiast. Welcome to my space!</p>
+
+    <section class="hero">
+        <div class="hero-content">
+            <h2>Welcome to My Portfolio</h2>
+            <p>Explore my projects, research, and blog posts.</p>
+            <a href="#projects" class="cta-button">See My Work</a>
+        </div>
     </section>
 
-    <section id="projects">
+    <section id="about" class="section">
+        <h2>About Me</h2>
+        <p>I am a machine learning researcher and computer science enthusiast. This website showcases my work and thoughts.</p>
+    </section>
+
+    <section id="projects" class="section">
         <h2>Projects</h2>
         <ul>
             <li><a href="#">Project 1</a></li>
@@ -26,7 +43,7 @@
         </ul>
     </section>
 
-    <section id="blog">
+    <section id="blog" class="section">
         <h2>Blog</h2>
         <ul>
             <li><a href="#">Blog Post 1</a></li>
@@ -36,8 +53,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2025 Connor Sicheri</p>
+        <p>&copy; 2025 Connor Sicheri. All Rights Reserved.</p>
     </footer>
 </body>
 </html>
-
