little more changes from gpt

--- a/index.html
+++ b/index.html
@@ -3,57 +3,45 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connor Sicheri - Portfolio</title>
+    <title>Connor Sicheri - Home</title>
     <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&family=Open+Sans:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
-    <header>
-        <div class="container">
-            <h1>Connor Sicheri</h1>
-            <nav>
-                <ul>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="projects.html">Projects</a></li>
-                    <li><a href="blog.html">Blog</a></li>
-                </ul>
-            </nav>
-        </div>
-    </header>
 
-    <section class="hero">
-        <div class="hero-content">
-            <h2>Welcome to My Portfolio</h2>
-            <p>Explore my projects, research, and blog posts.</p>
-            <a href="#projects" class="cta-button">See My Work</a>
-        </div>
-    </section>
+<header>
+    <div class="container">
+        <h1>Connor Sicheri</h1>
+        <nav>
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <li><a href="projects.html">Projects</a></li>
+                <li><a href="blog.html">Blog</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
-    <section id="about" class="section">
-        <h2>About Me</h2>
-        <p>I am a machine learning researcher and computer science enthusiast. This website showcases my work and thoughts.</p>
-    </section>
+<!-- Hero Section -->
+<section class="hero">
+    <h2>Welcome to My Personal Website</h2>
+    <p>Explore my projects, research, and blog.</p>
+    <a href="about.html" class="btn">Learn More About Me</a>
+</section>
 
-    <section id="projects" class="section">
-        <h2>Projects</h2>
-        <ul>
-            <li><a href="#">Project 1</a></li>
-            <li><a href="#">Project 2</a></li>
-            <li><a href="#">Project 3</a></li>
-        </ul>
-    </section>
+<!-- Main Content Section -->
+<section class="section">
+    <h2>Latest Projects</h2>
+    <ul>
+        <li><a href="#">Project 1</a></li>
+        <li><a href="#">Project 2</a></li>
+        <li><a href="#">Project 3</a></li>
+    </ul>
+</section>
 
-    <section id="blog" class="section">
-        <h2>Blog</h2>
-        <ul>
-            <li><a href="#">Blog Post 1</a></li>
-            <li><a href="#">Blog Post 2</a></li>
-            <li><a href="#">Blog Post 3</a></li>
-        </ul>
-    </section>
+<!-- Footer -->
+<footer>
+    <p>&copy; 2025 Connor Sicheri. All Rights Reserved.</p>
+</footer>
 
-    <footer>
-        <p>&copy; 2025 Connor Sicheri. All Rights Reserved.</p>
-    </footer>
 </body>
 </html>
