--- a/index.html
+++ b/index.html
@@ -23,18 +23,18 @@
 
 <!-- Hero Section -->
 <section class="hero">
-    <h2>Welcome to My Personal Website</h2>
+    <h2>Welcome to My Portfolio</h2>
     <p>Explore my projects, research, and blog.</p>
-    <a href="about.html" class="btn">Learn More About Me</a>
+    <a href="about.html" class="btn">Learn More</a>
 </section>
 
 <!-- Main Content Section -->
 <section class="section">
     <h2>Latest Projects</h2>
     <ul>
-        <li><a href="#">Project 1</a></li>
-        <li><a href="#">Project 2</a></li>
-        <li><a href="#">Project 3</a></li>
+        <li><a href="#">AI Research Project</a></li>
+        <li><a href="#">Web App Development</a></li>
+        <li><a href="#">Data Science Work</a></li>
     </ul>
 </section>
 
