--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </header>
 
 <!-- Hero Section -->
-<section class="hero">
+<section class="section">
     <h2>Welcome to My Portfolio</h2>
     <p>Explore my projects, research, and blog.</p>
     <a href="about.html" class="btn">Learn More</a>
@@ -31,7 +31,7 @@
 <!-- Main Content Section -->
 <section class="section">
     <h2>Latest Projects</h2>
-    <ul>
+    <ul class="white-list">
         <li><a href="#">AI Research Project</a></li>
         <li><a href="#">Web App Development</a></li>
         <li><a href="#">Data Science Work</a></li>
