--- a/index.html
+++ b/index.html
@@ -25,13 +25,12 @@
 <section class="section">
     <h2>Welcome to My Portfolio</h2>
     <p>Explore my projects, research, and blog.</p>
-    <a href="about.html" class="btn">Learn More</a>
 </section>
 
 <!-- Main Content Section -->
 <section class="section">
     <h2>Latest Projects</h2>
-    <ul class="white-list">
+    <ul class="dark-list">
         <li><a href="#">AI Research Project</a></li>
         <li><a href="#">Web App Development</a></li>
         <li><a href="#">Data Science Work</a></li>
