--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 
     <section class="section">
         <h2>My Projects</h2>
-        <ul>
+        <ul class="dark-list">
             <li><a href="#">Project 1</a></li>
             <li><a href="#">Project 2</a></li>
             <li><a href="#">Project 3</a></li>
