about and button hovers

--- a/about.html
+++ b/about.html
@@ -23,7 +23,9 @@
 
     <section class="section">
         <h2>About Me</h2>
-        <p>I am a machine learning researcher and computer science enthusiast...</p>
+        <p>I'm Connor Sicheri, a Computer Science and Mathematics student at the University of Toronto. With a strong background in machine learning, computational biology, and systems programming, I've worked on protein design using deep learning, user-level threading libraries, and custom file systems. I thrive on solving complex problems and optimizing performance in high-performance computing environments.
+
+            Beyond academics, I love hiking and adventuring—whether it's exploring new trails or tackling technical challenges.</p>
     </section>
 
     <footer>
