--- a/about.html
+++ b/about.html
@@ -28,6 +28,13 @@
             Beyond academics, I love hiking and adventuring—whether it's exploring new trails or tackling technical challenges.</p>
     </section>
 
+    <!-- Image Gallery -->
+    <div class="image-gallery">
+        <img src="images/hiking.jpg" alt="Hiking Adventure">
+        <img src="images/face.jpg" alt="Coding Session">
+        <img src="images/bridge.jpg" alt="Working in a Lab">
+    </div>
+
     <footer>
         <p>&copy; 2025 Connor Sicheri. All Rights Reserved.</p>
     </footer>
