--- a/about.html
+++ b/about.html
@@ -30,9 +30,9 @@
 
     <!-- Image Gallery -->
     <div class="image-gallery">
-        <img src="images/hiking.jpg" alt="Hiking Adventure">
-        <img src="images/face.jpg" alt="Coding Session">
-        <img src="images/bridge.jpg" alt="Working in a Lab">
+        <img src="images/hiking.jpeg" alt="Hiking Banff">
+        <img src="images/face.jpeg" alt="Me and Mom!">
+        <img src="images/bridge.jpeg" alt="Coppenhagen">
     </div>
 
     <footer>
