--- a/blogs/shortest_path_reduction.html
+++ b/blogs/shortest_path_reduction.html
@@ -47,8 +47,8 @@
             We transform our graph as follows:
         </p>
         <div class="image-gallery">
-            <img src="original_graph.png" alt="Original Graph">
-            <img src="transformed_graph.png" alt="Transformed Graph">
+            <img src="../images/original_graph.png" alt="Original Graph">
+            <img src="../images/transformed_graph.png" alt="Transformed Graph">
         </div>
         <p>
             For every node in G, in G' we replace it with three nodes (Red, Green, White). Every red edge in G is transformed to an edge (red → white),
