--- a/blog.html
+++ b/blog.html
@@ -24,7 +24,7 @@
     <section class="section">
         <h2>Blog</h2>
         <ul>
-            <li><a href="blogs/shortest_path_reduction.html">Blog Post 1</a></li>
+            <li><a href="blogs/shortest_path_reduction.html">A Modified Shortest Path Problem</a></li>
             <li><a href="#">Blog Post 2</a></li>
             <li><a href="#">Blog Post 3</a></li>
         </ul>
