--- a/blogs/shortest_path_reduction.html
+++ b/blogs/shortest_path_reduction.html
@@ -25,6 +25,15 @@
         <h1>Bulgarian Path Algorithm</h1>
     </header>
     <section class="section">
+        <h2>Preface</h2>
+        <p>
+            This problem...
+        </p>
+
+
+    </section>
+
+    <section class="section">
         <h2>Problem 1</h2>
         <p>
             In this problem, you are given as input a directed graph G = (V, E), where each directed edge e ∈ E has a real-valued weight w(e),
