--- a/blogs/shortest_path_reduction.html
+++ b/blogs/shortest_path_reduction.html
@@ -27,7 +27,11 @@
     <section class="section">
         <h2>Preface</h2>
         <p>
-            This problem...
+            The shortest path problem is a fundamental question in graph theory and optimization. Given a graph with weighted edges, the goal is to determine the most efficient route between two nodes. This problem has widespread applications in areas like navigation, network routing, and artificial intelligence. Algorithms such as Dijkstra’s and Bellman-Ford provide efficient solutions under various conditions, making shortest path computations a cornerstone of theoretical and applied computer science.
+
+            One particularly interesting variation is the Bulgarian Path Problem, which introduces additional constraints beyond simple distance minimization. This problem is relevant because it reflects real-world scenarios where paths are influenced by more than just length—consider factors like tolls, fuel consumption, or road closures. Studying reductions to the shortest path problem, such as those involving the Bulgarian Path Problem, provides deeper insights into complexity theory and algorithmic efficiency, helping researchers develop more robust and adaptable pathfinding algorithms.
+
+            This blog post explores how the Bulgarian Path Problem can be reduced to the shortest path problem, offering a fresh perspective on constraint-driven graph traversal.
         </p>
 
 
