--- a/projects.html
+++ b/projects.html
@@ -24,7 +24,7 @@
     <section class="section">
         <h2>My Projects</h2>
         <ul class="dark-list">
-            <li><a href="#">Project 1</a></li>
+            <li><a href="projects/PETase_redesign.html">Deep Learning Based Protein Optimization</a></li>
             <li><a href="#">Project 2</a></li>
             <li><a href="#">Project 3</a></li>
         </ul>
