--- a/projects/PETase_redesign.html
+++ b/projects/PETase_redesign.html
@@ -49,7 +49,7 @@
         <h2>Project Poster</h2>
         <p>Below is the research poster summarizing our findings:</p>
         <div class="image-gallery">
-            <img src="../images/petase_poster.jpg" alt="PETase Research Poster">
+            <img src="../images/petase_poster.jpg" alt="PETase Research Poster" style="width: 100%; max-width: 900px; display: block; margin: 0 auto;">
         </div>
     </section>
 
