--- a/about.html
+++ b/about.html
@@ -3,40 +3,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About - Connor Sicheri</title>
+    <title>About — Connor Sicheri</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Connor Sicheri</h1>
+        <div class="container nav">
+            <div class="brand">Connor Sicheri</div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <section class="section">
-        <h2>About Me</h2>
-        <p>I'm Connor Sicheri, a Computer Science and Mathematics student at the University of Toronto. With a strong background in machine learning, computational biology, and systems programming, I've worked on protein design using deep learning, user-level threading libraries, and custom file systems. I thrive on solving complex problems and optimizing performance in high-performance computing environments.
+    <main class="container">
+        <section class="section">
+            <div class="about-header">
+                <img class="avatar" src="images/face.jpeg" alt="Connor portrait" />
+                <div>
+                    <h1>About Me</h1>
+                    <p>I'm Connor Sicheri, studying Computer Science and Mathematics at the University of Toronto. I like building performant systems and useful applied ML. I’ve worked on protein design with deep learning, user‑level threading libraries, and custom filesystems.</p>
+                </div>
+            </div>
+            <div class="timeline">
+                <div class="item">
+                    <h4>Research — ML for Protein Engineering</h4>
+                    <p>Exploring sequence design and structure prediction workflows; evaluating stability and activity in‑silico.</p>
+                </div>
+                <div class="item">
+                    <h4>Systems — Runtimes and Storage</h4>
+                    <p>Implemented user‑level threading primitives and a simple filesystem; focused on contention, scheduling and durability.</p>
+                </div>
+            </div>
+        </section>
 
-            Beyond academics, I love hiking and adventuring—whether it's exploring new trails or tackling technical challenges.</p>
-    </section>
-
-    <!-- Image Gallery -->
-    <div class="image-gallery">
-        <img src="images/hiking.jpeg" alt="Hiking Banff">
-        <img src="images/face.jpeg" alt="Me and Mom!">
-        <img src="images/bridge.jpeg" alt="Coppenhagen">
-    </div>
+        <section class="section">
+            <div class="section-title">Life outside code</div>
+            <div class="image-gallery">
+                <img src="images/hiking.jpeg" alt="Hiking Banff">
+                <img src="images/bridge.jpeg" alt="Copenhagen bridge">
+            </div>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2025 Connor Sicheri. All Rights Reserved.</p>
+        <div class="container">&copy; 2025 Connor Sicheri. All Rights Reserved.</div>
     </footer>
 </body>
 </html>
