--- a/index.html
+++ b/index.html
@@ -3,44 +3,104 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Connor Sicheri - Home</title>
+    <title>Connor Sicheri — Engineer & Researcher</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="Projects, research, and notes by Connor Sicheri.">
+    <meta property="og:title" content="Connor Sicheri">
+    <meta property="og:description" content="Projects, research, and notes.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="images/face.jpeg">
+    <link rel="icon" href="images/face.jpeg">
 </head>
 <body>
 
 <header>
-    <div class="container">
-        <h1>Connor Sicheri</h1>
+    <div class="container nav">
+        <div class="brand">Connor Sicheri</div>
         <nav>
             <ul>
-                <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="blog.html">Blog</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </div>
-</header>
+    </header>
 
-<!-- Hero Section -->
-<section class="section">
-    <h2>Welcome to My Portfolio</h2>
-    <p>Explore my projects, research, and blog.</p>
-</section>
+<main class="container">
+    <section class="hero">
+        <div class="content">
+            <div>
+                <h1 class="title">Building intelligent systems at the intersection of ML, systems, and computational biology.</h1>
+                <p class="subtitle">I design models and infrastructure, from protein engineering to high‑performance runtimes. Currently exploring how small, focused tools can have outsized impact.</p>
+                <div class="actions">
+                    <a class="btn primary" href="projects.html">View Projects</a>
+                    <a class="btn" href="about.html">About Me</a>
+                </div>
+            </div>
+            <div style="display:flex; justify-content:center;">
+                <img class="avatar" src="images/face.jpeg" alt="Connor portrait" />
+            </div>
+        </div>
+    </section>
 
-<!-- Main Content Section -->
-<section class="section">
-    <h2>Latest Projects</h2>
-    <ul>
-        <li><a href="#">AI Research Project</a></li>
-        <li><a href="#">Web App Development</a></li>
-        <li><a href="#">Data Science Work</a></li>
-    </ul>
-</section>
+    <section class="section">
+        <div class="section-title">Featured Projects</div>
+        <div class="grid">
+            <div class="card">
+                <img class="thumb" src="images/petase_poster.jpg" alt="PETase redesign" />
+                <h3>PETase Redesign</h3>
+                <p>ML‑guided sequence optimization for a PET‑degrading enzyme; stability and activity improvements prioritized via in‑silico screens.</p>
+                <div class="tags">
+                    <span class="tag">Protein Design</span>
+                    <span class="tag">Deep Learning</span>
+                </div>
+                <div class="links">
+                    <a href="projects/PETase_redesign.html">Details</a>
+                </div>
+            </div>
+            <div class="card">
+                <img class="thumb" src="images/transformed_graph.png" alt="Shortest path reduction" />
+                <h3>Graph Reduction for Shortest Path Variants</h3>
+                <p>Problem transformation and proof sketch for a constrained shortest path variant; practical benchmarks and visualizations.</p>
+                <div class="tags">
+                    <span class="tag">Algorithms</span>
+                    <span class="tag">Theory</span>
+                </div>
+                <div class="links">
+                    <a href="blogs/shortest_path_reduction.html">Read Post</a>
+                </div>
+            </div>
+            <div class="card">
+                <img class="thumb" src="images/original_graph.png" alt="Systems image" />
+                <h3>Systems and Runtimes</h3>
+                <p>User‑level threading and filesystem experiments focused on correctness and performance under contention.</p>
+                <div class="tags">
+                    <span class="tag">C/C++</span>
+                    <span class="tag">OS</span>
+                </div>
+                <div class="links">
+                    <a href="projects.html">More</a>
+                </div>
+            </div>
+        </div>
+    </section>
 
-<!-- Footer -->
+    <section class="section">
+        <div class="section-title">Latest Writing</div>
+        <ul>
+            <li><a href="blogs/shortest_path_reduction.html">A Modified Shortest Path Problem</a></li>
+        </ul>
+    </section>
+    <div class="spacer"></div>
+</main>
+
 <footer>
-    <p>&copy; 2025 Connor Sicheri. All Rights Reserved.</p>
-</footer>
+    <div class="container">&copy; 2025 Connor Sicheri. All Rights Reserved.</div>
+    </footer>
 
 </body>
 </html>
