--- a/projects.html
+++ b/projects.html
@@ -3,35 +3,69 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projects - Connor Sicheri</title>
+    <title>Projects — Connor Sicheri</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Connor Sicheri</h1>
+        <div class="container nav">
+            <div class="brand">Connor Sicheri</div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
         </div>
     </header>
 
-    <section class="section">
-        <h2>My Projects</h2>
-        <ul class="dark-list">
-            <li><a href="projects/PETase_redesign.html">Deep Learning Based Protein Optimization</a></li>
-            <li><a href="#">Project 2</a></li>
-            <li><a href="#">Project 3</a></li>
-        </ul>
-    </section>
+    <main class="container">
+        <section class="section">
+            <div class="section-title">Projects</div>
+            <div class="grid">
+                <div class="card">
+                    <img class="thumb" src="images/petase_poster.jpg" alt="PETase redesign" />
+                    <h3>PETase Redesign</h3>
+                    <p>ML‑guided sequence optimization for a PET‑degrading enzyme; stability and activity improvements prioritized via in‑silico screens.</p>
+                    <div class="tags">
+                        <span class="tag">Protein Design</span>
+                        <span class="tag">Deep Learning</span>
+                    </div>
+                    <div class="links">
+                        <a href="projects/PETase_redesign.html">Details</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="thumb" src="images/transformed_graph.png" alt="Shortest path reduction" />
+                    <h3>Graph Reduction for Shortest Path Variants</h3>
+                    <p>Problem transformation and proof sketch for a constrained shortest path variant; practical benchmarks and visualizations.</p>
+                    <div class="tags">
+                        <span class="tag">Algorithms</span>
+                        <span class="tag">Theory</span>
+                    </div>
+                    <div class="links">
+                        <a href="blogs/shortest_path_reduction.html">Read Post</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="thumb" src="images/original_graph.png" alt="Systems image" />
+                    <h3>Systems and Runtimes</h3>
+                    <p>User‑level threading and filesystem experiments focused on correctness and performance under contention.</p>
+                    <div class="tags">
+                        <span class="tag">C/C++</span>
+                        <span class="tag">OS</span>
+                    </div>
+                    <div class="links">
+                        <a href="#">Coming Soon</a>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
     <footer>
-        <p>&copy; 2025 Connor Sicheri. All Rights Reserved.</p>
+        <div class="container">&copy; 2025 Connor Sicheri. All Rights Reserved.</div>
     </footer>
 </body>
 </html>
