--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="assets/css/main.css">
     <meta name="description" content="Projects, research, and notes by Connor Sicheri.">
     <meta property="og:title" content="Connor Sicheri">
     <meta property="og:description" content="Projects, research, and notes.">
@@ -20,15 +20,18 @@
 <header>
     <div class="container nav">
         <div class="brand">Connor Sicheri</div>
-        <nav>
-            <ul>
-                <li><a href="projects.html">Projects</a></li>
-                <li><a href="blog.html">Blog</a></li>
-                <li><a href="about.html">About</a></li>
-            </ul>
-        </nav>
+        <div style="display:flex; align-items:center; gap:12px;">
+            <nav>
+                <ul>
+                    <li><a href="projects.html">Projects</a></li>
+                    <li><a href="blog.html">Blog</a></li>
+                    <li><a href="about.html">About</a></li>
+                </ul>
+            </nav>
+            <button class="theme-toggle" data-theme-toggle>Light mode</button>
+        </div>
     </div>
-    </header>
+</header>
 
 <main class="container">
     <section class="hero">
@@ -100,7 +103,9 @@
 
 <footer>
     <div class="container">&copy; 2025 Connor Sicheri. All Rights Reserved.</div>
-    </footer>
+</footer>
+
+<script src="assets/js/theme.js"></script>
 
 </body>
 </html>
