feat: home link + explicit Home nav, sun/moon slider theme switch, refined spacing

--- a/index.html
+++ b/index.html
@@ -19,16 +19,25 @@
 
 <header>
     <div class="container nav">
-        <div class="brand">Connor Sicheri</div>
+        <div class="brand"><a href="index.html">Connor Sicheri</a></div>
         <div style="display:flex; align-items:center; gap:12px;">
             <nav>
                 <ul>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="projects.html">Projects</a></li>
                     <li><a href="blog.html">Blog</a></li>
                     <li><a href="about.html">About</a></li>
                 </ul>
             </nav>
-            <button class="theme-toggle" data-theme-toggle>Light mode</button>
+            <button class="theme-switch" aria-label="Toggle color theme" data-theme-toggle>
+                <span class="icon sun" aria-hidden="true">
+                    <svg width="16" height="16" viewBox="0 0 24 24"><path d="M6.76 4.84l-1.8-1.79-1.41 1.41 1.79 1.8 1.42-1.42zM1 13h3v-2H1v2zm10-8h-2v3h2V5zm7.66 1.66l-1.41-1.41-1.8 1.79 1.42 1.42 1.79-1.8zM17 13h3v-2h-3v2zm-5 6h2v-3h-2v3zm-7.66-.66l1.41 1.41 1.8-1.79-1.42-1.42-1.79 1.8zM12 8a4 4 0 100 8 4 4 0 000-8z"/></svg>
+                </span>
+                <div class="track"><div class="thumb"></div></div>
+                <span class="icon moon" aria-hidden="true">
+                    <svg width="16" height="16" viewBox="0 0 24 24"><path d="M21.64 13a1 1 0 00-1.05-.14 8 8 0 01-10.45-10.45 1 1 0 00-1.19-1.33A10 10 0 1022 14.19a1 1 0 00-.36-1.19z"/></svg>
+                </span>
+            </button>
         </div>
     </div>
 </header>
