feat(about): compact side-by-side gallery with captions

--- a/about.html
+++ b/about.html
@@ -55,9 +55,15 @@
 
         <section class="section">
             <div class="section-title">Life outside code</div>
-            <div class="image-gallery">
-                <img src="images/hiking.jpeg" alt="Hiking Banff">
-                <img src="images/bridge.jpeg" alt="Copenhagen bridge">
+            <div class="gallery-inline">
+                <figure>
+                    <img src="images/hiking.jpeg" alt="Banff trail ridge">
+                    <figcaption>Long ridge days in Banff. Nothing resets the mind like altitude and a map.</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/bridge.jpeg" alt="Copenhagen bridge at dusk">
+                    <figcaption>Golden hour rides across Copenhagen’s bridges—quiet, windy, perfect.</figcaption>
+                </figure>
             </div>
         </section>
     </main>
