--- a/about.html
+++ b/about.html
@@ -58,13 +58,12 @@
             <div class="gallery-inline">
                 <figure>
                     <img src="images/hiking.jpeg" alt="Banff trail ridge">
-                    <figcaption>Long ridge days in Banff. Nothing resets the mind like altitude and a map.</figcaption>
                 </figure>
                 <figure>
                     <img src="images/bridge.jpeg" alt="Copenhagen bridge at dusk">
-                    <figcaption>Golden hour rides across Copenhagen’s bridges—quiet, windy, perfect.</figcaption>
                 </figure>
             </div>
+            <p class="gallery-caption">Long ridge days in Banff and golden hour rides across Copenhagen’s bridges—resetting the mind with altitude, maps, and windy waterfronts.</p>
         </section>
     </main>
 
