--- a/about.html
+++ b/about.html
@@ -55,15 +55,16 @@
 
         <section class="section">
             <div class="section-title">Life outside code</div>
-            <div class="gallery-inline">
-                <figure>
-                    <img src="images/hiking.jpeg" alt="Banff trail ridge">
-                </figure>
-                <figure>
-                    <img src="images/bridge.jpeg" alt="Copenhagen bridge at dusk">
-                </figure>
+            <div class="vstack">
+                <div class="vrow">
+                    <div class="image"><img src="images/hiking.jpeg" alt="Banff trail ridge"></div>
+                    <div class="text">Long ridge days in Banff. Nothing resets the mind like altitude and a map.</div>
+                </div>
+                <div class="vrow reverse">
+                    <div class="image"><img src="images/bridge.jpeg" alt="Copenhagen bridge at dusk"></div>
+                    <div class="text">Golden hour rides across Copenhagen’s bridges—quiet, windy, perfect.</div>
+                </div>
             </div>
-            <p class="gallery-caption">Long ridge days in Banff and golden hour rides across Copenhagen’s bridges—resetting the mind with altitude, maps, and windy waterfronts.</p>
         </section>
     </main>
 
