feat(theme): VS Code titlebar/nav colors + code-styled listing for Latest Writing

--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
 
     <section class="section">
         <div class="section-title">Latest Writing</div>
-        <ul>
-            <li><a href="blogs/shortest_path_reduction.html">A Modified Shortest Path Problem</a></li>
-        </ul>
+        <div class="code-card"><code>
+<span class="tok-com">// recent</span>
+<span class="tok-kw">post</span> <span class="tok-id">A_Modified_Shortest_Path_Problem</span><span class="tok-op">()</span> <span class="tok-op">=&gt;</span> <span class="tok-str">"graph transform + proof sketch"</span>
+        </code></div>
     </section>
     <div class="spacer"></div>
 </main>
