feat(ui): VS Code-style mono cards, token colors, and subtle //comment lines across cards

--- a/projects.html
+++ b/projects.html
@@ -38,8 +38,8 @@
             <div class="grid">
                 <div class="card">
                     <img class="thumb" src="images/petase_poster.jpg" alt="PETase redesign" />
-                    <h3>PETase Redesign</h3>
-                    <p>ML‑guided sequence optimization for a PET‑degrading enzyme; stability and activity improvements prioritized via in‑silico screens.</p>
+                    <h3>PETase_Redesign</h3>
+                    <p class="comment-line">ML-guided sequence optimization for a PET-degrading enzyme.</p>
                     <div class="tags">
                         <span class="tag">Protein Design</span>
                         <span class="tag">Deep Learning</span>
@@ -50,8 +50,8 @@
                 </div>
                 <div class="card">
                     <img class="thumb" src="images/transformed_graph.png" alt="Shortest path reduction" />
-                    <h3>Graph Reduction for Shortest Path Variants</h3>
-                    <p>Problem transformation and proof sketch for a constrained shortest path variant; practical benchmarks and visualizations.</p>
+                    <h3>Graph_Reduction_for_Shortest_Path</h3>
+                    <p class="comment-line">Problem transform + proof sketch for constrained shortest path.</p>
                     <div class="tags">
                         <span class="tag">Algorithms</span>
                         <span class="tag">Theory</span>
@@ -62,8 +62,8 @@
                 </div>
                 <div class="card">
                     <img class="thumb" src="images/original_graph.png" alt="Systems image" />
-                    <h3>Systems and Runtimes</h3>
-                    <p>User‑level threading and filesystem experiments focused on correctness and performance under contention.</p>
+                    <h3>Systems_and_Runtimes</h3>
+                    <p class="comment-line">User-level threading + filesystem experiments; focus: contention.</p>
                     <div class="tags">
                         <span class="tag">C/C++</span>
                         <span class="tag">OS</span>
