--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <section class="hero">
         <div class="content">
             <div>
-                <h1 class="title">Building intelligent systems at the intersection of ML, systems, and computational biology.</h1>
-                <p class="subtitle">I design models and infrastructure, from protein engineering to high‑performance runtimes. Currently exploring how small, focused tools can have outsized impact.</p>
+                <h1 class="title mono">Building_intelligent_systems_at_the_intersection_of_ML,_systems,_and_compbio</h1>
+                <p class="subtitle comment-line">Designing models + infrastructure from protein engineering to high-performance runtimes.</p>
                 <div class="actions">
                     <a class="btn primary" href="projects.html">View Projects</a>
                     <a class="btn" href="about.html">About Me</a>
