style: restore natural titles while keeping mono/comment visual style

--- a/blog.html
+++ b/blog.html
@@ -37,15 +37,15 @@
             <div class="section-title">Writing</div>
             <div class="grid">
                 <div class="card">
-                    <h3><a href="blogs/shortest_path_reduction.html">Modified_Shortest_Path</a></h3>
+                    <h3><a href="blogs/shortest_path_reduction.html">A Modified Shortest Path Problem</a></h3>
                     <p class="comment-line">Graph transform for constrained shortest path; proofs + visuals.</p>
                 </div>
                 <div class="card">
-                    <h3>Small_Tools_and_Leverage</h3>
+                    <h3>On small tools and leverage</h3>
                     <p class="comment-line">Notes on focused tools with compounding impact. (Coming soon)</p>
                 </div>
                 <div class="card">
-                    <h3>Runtime_Notes</h3>
+                    <h3>Runtime notes</h3>
                     <p class="comment-line">Scheduling, fairness, performance under contention. (Coming soon)</p>
                 </div>
             </div>
