--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <section class="hero">
         <div class="content">
             <div>
-                <h1 class="title mono">Building_intelligent_systems_at_the_intersection_of_ML,_systems,_and_compbio</h1>
+                <h1 class="title mono">Building intelligent systems at the intersection of ML, systems, and computational biology.</h1>
                 <p class="subtitle comment-line">Designing models + infrastructure from protein engineering to high-performance runtimes.</p>
                 <div class="actions">
                     <a class="btn primary" href="projects.html">View Projects</a>
@@ -64,7 +64,7 @@
         <div class="grid">
             <div class="card">
                 <img class="thumb" src="images/petase_poster.jpg" alt="PETase redesign" />
-                <h3>PETase_Redesign</h3>
+                <h3>PETase Redesign</h3>
                 <p class="comment-line">ML-guided sequence optimization for a PET-degrading enzyme.</p>
                 <div class="tags">
                     <span class="tag">Protein Design</span>
@@ -76,7 +76,7 @@
             </div>
             <div class="card">
                 <img class="thumb" src="images/transformed_graph.png" alt="Shortest path reduction" />
-                <h3>Graph_Reduction_for_Shortest_Path</h3>
+                <h3>Graph Reduction for Shortest Path Variants</h3>
                 <p class="comment-line">Problem transform + proof sketch for constrained shortest path.</p>
                 <div class="tags">
                     <span class="tag">Algorithms</span>
@@ -88,7 +88,7 @@
             </div>
             <div class="card">
                 <img class="thumb" src="images/original_graph.png" alt="Systems image" />
-                <h3>Systems_and_Runtimes</h3>
+                <h3>Systems and Runtimes</h3>
                 <p class="comment-line">User-level threading + filesystem experiments; focus: contention.</p>
                 <div class="tags">
                     <span class="tag">C/C++</span>
