--- a/projects.html
+++ b/projects.html
@@ -38,7 +38,7 @@
             <div class="grid">
                 <div class="card">
                     <img class="thumb" src="images/petase_poster.jpg" alt="PETase redesign" />
-                    <h3>PETase_Redesign</h3>
+                    <h3>PETase Redesign</h3>
                     <p class="comment-line">ML-guided sequence optimization for a PET-degrading enzyme.</p>
                     <div class="tags">
                         <span class="tag">Protein Design</span>
@@ -50,7 +50,7 @@
                 </div>
                 <div class="card">
                     <img class="thumb" src="images/transformed_graph.png" alt="Shortest path reduction" />
-                    <h3>Graph_Reduction_for_Shortest_Path</h3>
+                    <h3>Graph Reduction for Shortest Path Variants</h3>
                     <p class="comment-line">Problem transform + proof sketch for constrained shortest path.</p>
                     <div class="tags">
                         <span class="tag">Algorithms</span>
@@ -62,7 +62,7 @@
                 </div>
                 <div class="card">
                     <img class="thumb" src="images/original_graph.png" alt="Systems image" />
-                    <h3>Systems_and_Runtimes</h3>
+                    <h3>Systems and Runtimes</h3>
                     <p class="comment-line">User-level threading + filesystem experiments; focus: contention.</p>
                     <div class="tags">
                         <span class="tag">C/C++</span>
