--- a/about.html
+++ b/about.html
@@ -37,32 +37,32 @@
             <div class="about-header">
                 <img class="avatar" src="images/face.jpeg" alt="Connor portrait" />
                 <div>
-                    <h1>About Me</h1>
-                    <p>I'm Connor Sicheri, studying Computer Science and Mathematics at the University of Toronto. I like building performant systems and useful applied ML. I’ve worked on protein design with deep learning, user‑level threading libraries, and custom filesystems.</p>
+                    <h1 class="mono">About Me</h1>
+                    <p class="comment-line">Building performant systems and applied ML; CS + Math @ UofT.</p>
                 </div>
             </div>
             <div class="timeline">
                 <div class="item">
-                    <h4>Research — ML for Protein Engineering</h4>
-                    <p>Exploring sequence design and structure prediction workflows; evaluating stability and activity in‑silico.</p>
+                    <h4 class="mono">Research — ML for Protein Engineering</h4>
+                    <p class="comment-line">Sequence design + structure prediction; stability/activity in‑silico.</p>
                 </div>
                 <div class="item">
-                    <h4>Systems — Runtimes and Storage</h4>
-                    <p>Implemented user‑level threading primitives and a simple filesystem; focused on contention, scheduling and durability.</p>
+                    <h4 class="mono">Systems — Runtimes and Storage</h4>
+                    <p class="comment-line">User‑level threads + filesystem; contention, scheduling, durability.</p>
                 </div>
             </div>
         </section>
 
         <section class="section">
-            <div class="section-title">Life outside code</div>
+            <div class="section-title mono">Life outside code</div>
             <div class="vstack">
                 <div class="vrow">
                     <div class="image"><img src="images/hiking.jpeg" alt="Banff trail ridge"></div>
-                    <div class="text">Long ridge days in Banff. Nothing resets the mind like altitude and a map.</div>
+                    <div class="text comment-line">Long ridge days in Banff. Nothing resets the mind like altitude and a map.</div>
                 </div>
                 <div class="vrow reverse">
                     <div class="image"><img src="images/bridge.jpeg" alt="Copenhagen bridge at dusk"></div>
-                    <div class="text">Golden hour rides across Copenhagen’s bridges—quiet, windy, perfect.</div>
+                    <div class="text comment-line">Golden hour rides across Copenhagen’s bridges—quiet, windy, perfect.</div>
                 </div>
             </div>
         </section>
