style: limit //comment styling to cards/snippets; revert body copy to normal text

--- a/about.html
+++ b/about.html
@@ -38,17 +38,17 @@
                 <img class="avatar" src="images/face.jpeg" alt="Connor portrait" />
                 <div>
                     <h1 class="mono">About Me</h1>
-                    <p class="comment-line">Building performant systems and applied ML; CS + Math @ UofT.</p>
+                    <p>Building performant systems and applied ML; CS + Math @ UofT.</p>
                 </div>
             </div>
             <div class="timeline">
                 <div class="item">
                     <h4 class="mono">Research — ML for Protein Engineering</h4>
-                    <p class="comment-line">Sequence design + structure prediction; stability/activity in‑silico.</p>
+                    <p>Sequence design and structure prediction; stability and activity in‑silico.</p>
                 </div>
                 <div class="item">
                     <h4 class="mono">Systems — Runtimes and Storage</h4>
-                    <p class="comment-line">User‑level threads + filesystem; contention, scheduling, durability.</p>
+                    <p>User‑level threads and filesystem; contention, scheduling, durability.</p>
                 </div>
             </div>
         </section>
@@ -58,11 +58,11 @@
             <div class="vstack">
                 <div class="vrow">
                     <div class="image"><img src="images/hiking.jpeg" alt="Banff trail ridge"></div>
-                    <div class="text comment-line">Long ridge days in Banff. Nothing resets the mind like altitude and a map.</div>
+                    <div class="text">Long ridge days in Banff. Nothing resets the mind like altitude and a map.</div>
                 </div>
                 <div class="vrow reverse">
                     <div class="image"><img src="images/bridge.jpeg" alt="Copenhagen bridge at dusk"></div>
-                    <div class="text comment-line">Golden hour rides across Copenhagen’s bridges—quiet, windy, perfect.</div>
+                    <div class="text">Golden hour rides across Copenhagen’s bridges—quiet, windy, perfect.</div>
                 </div>
             </div>
         </section>
