--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         <div class="content">
             <div>
                 <h1 class="title mono">Building intelligent systems at the intersection of ML, systems, and computational biology.</h1>
-                <p class="subtitle comment-line">Designing models + infrastructure from protein engineering to high-performance runtimes.</p>
+                <p class="subtitle">Designing models and infrastructure, from protein engineering to high‑performance runtimes.</p>
                 <div class="actions">
                     <a class="btn primary" href="projects.html">View Projects</a>
                     <a class="btn" href="about.html">About Me</a>
