--- a/projects/PETase_redesign.html
+++ b/projects/PETase_redesign.html
@@ -35,7 +35,7 @@
     <main class="container">
         <article class="prose section">
             <h1 class="mono">Deep Learning‑Based Sequence Optimization of a PET‑Degrading Enzyme</h1>
-            <p class="comment-line">Leveraging ML to redesign PETase for stability and activity in real-world use.</p>
+            <p>Leveraging ML to redesign PETase for stability and activity in real-world use.</p>
 
             <h2 class="mono">Machine Learning and Computational Methods</h2>
             <ul>
