feat(favicon): add χσ AI-themed SVG favicon and wire across pages

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta property="og:description" content="Projects, research, and notes.">
     <meta property="og:type" content="website">
     <meta property="og:image" content="images/face.jpeg">
-    <link rel="icon" href="images/face.jpeg">
+    <link rel="icon" href="/favicon.svg" type="image/svg+xml">
 </head>
 <body>
 
