--- a/projects.html
+++ b/projects.html
@@ -62,15 +62,27 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img class="thumb" src="images/original_graph.png" alt="Systems image" />
-                    <h3>Systems and Runtimes</h3>
-                    <p class="comment-line">User-level threading + filesystem experiments; focus: contention.</p>
+                    <img class="thumb" src="images/preemptive_threading.png" alt="Pre‑emptive threading" />
+                    <h3>Pre‑emptive User‑Level Threading (C)</h3>
+                    <p class="comment-line">Timer-driven preemption, scheduler, and sync primitives.</p>
                     <div class="tags">
-                        <span class="tag">C/C++</span>
+                        <span class="tag">C</span>
                         <span class="tag">OS</span>
                     </div>
                     <div class="links">
-                        <a href="#">Coming Soon</a>
+                        <a href="projects/ULP_threading.html">Details</a>
+                    </div>
+                </div>
+                <div class="card">
+                    <img class="thumb" src="images/agentic-ai.png" alt="Agentic Jira parser" />
+                    <h3>Agentic Jira Parser & PR Creator</h3>
+                    <p class="comment-line">Parse tickets, plan edits, open PRs autonomously.</p>
+                    <div class="tags">
+                        <span class="tag">Agents</span>
+                        <span class="tag">DevTools</span>
+                    </div>
+                    <div class="links">
+                        <a href="projects/agentic_jira_parser.html">Details</a>
                     </div>
                 </div>
             </div>
