Homepage refresh: AI/systems hero; Featured Projects update; Latest Writing cards. Move shortest-path to blog only; remove from projects.

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <section class="hero">
         <div class="content">
             <div>
-                <h1 class="title mono">Building intelligent systems at the intersection of ML, systems, and computational biology.</h1>
-                <p class="subtitle">Designing models and infrastructure, from protein engineering to high‑performance runtimes.</p>
+                <h1 class="title mono">AI engineer and systems designer building reliable, high‑performance software.</h1>
+                <p class="subtitle">Designing agents, runtimes, and infrastructure — from research to production.</p>
                 <div class="actions">
                     <a class="btn primary" href="projects.html">View Projects</a>
                     <a class="btn" href="about.html">About Me</a>
@@ -75,15 +75,15 @@
                 </div>
             </div>
             <div class="card">
-                <img class="thumb" src="images/transformed_graph.png" alt="Shortest path reduction" />
-                <h3>Graph Reduction for Shortest Path Variants</h3>
-                <p class="comment-line">Problem transform + proof sketch for constrained shortest path.</p>
+                <img class="thumb" src="images/agentic-ai.png" alt="Agentic Jira parser" />
+                <h3>Agentic Jira Parser & PR Creator</h3>
+                <p class="comment-line">Parse tickets, plan edits, open PRs autonomously.</p>
                 <div class="tags">
-                    <span class="tag">Algorithms</span>
-                    <span class="tag">Theory</span>
+                    <span class="tag">Agents</span>
+                    <span class="tag">DevTools</span>
                 </div>
                 <div class="links">
-                    <a href="blogs/shortest_path_reduction.html">Read Post</a>
+                    <a href="projects/agentic_jira_parser.html">Details</a>
                 </div>
             </div>
             <div class="card">
@@ -103,10 +103,12 @@
 
     <section class="section">
         <div class="section-title">Latest Writing</div>
-        <div class="code-card"><code>
-<span class="tok-com">// recent</span>
-<span class="tok-kw">post</span> <span class="tok-id">A_Modified_Shortest_Path_Problem</span><span class="tok-op">()</span> <span class="tok-op">=&gt;</span> <span class="tok-str">"graph transform + proof sketch"</span>
-        </code></div>
+        <div class="grid">
+            <div class="card">
+                <h3><a href="blogs/shortest_path_reduction.html">A Modified Shortest Path Problem</a></h3>
+                <p class="comment-line">Graph transform for constrained shortest path; proofs + visuals.</p>
+            </div>
+        </div>
     </section>
     <div class="spacer"></div>
 </main>
