--- a/projects.html
+++ b/projects.html
@@ -49,18 +49,7 @@
                         <a href="projects/PETase_redesign.html">Details</a>
                     </div>
                 </div>
-                <div class="card">
-                    <img class="thumb" src="images/transformed_graph.png" alt="Shortest path reduction" />
-                    <h3>Graph Reduction for Shortest Path Variants</h3>
-                    <p class="comment-line">Problem transform + proof sketch for constrained shortest path.</p>
-                    <div class="tags">
-                        <span class="tag">Algorithms</span>
-                        <span class="tag">Theory</span>
-                    </div>
-                    <div class="links">
-                        <a href="blogs/shortest_path_reduction.html">Read Post</a>
-                    </div>
-                </div>
+                <!-- moved to blog -->
                 <div class="card">
                     <img class="thumb" src="images/preemptive_threading.png" alt="Pre‑emptive threading" />
                     <h3>Pre‑emptive User‑Level Threading (C)</h3>
