--- a/blog.html
+++ b/blog.html
@@ -38,6 +38,10 @@
             <div class="section-title">Writing</div>
             <div class="grid">
                 <div class="card">
+                    <h3><a href="blogs/assignment2_probabilistic_ml.html">Probabilistic ML: Assignment 2</a></h3>
+                    <p class="comment-line">Image denoising, HMC, and TrueSkill Bayesian inference.</p>
+                </div>
+                <div class="card">
                     <h3><a href="blogs/shortest_path_reduction.html">A Modified Shortest Path Problem</a></h3>
                     <p class="comment-line">Graph transform for constrained shortest path; proofs + visuals.</p>
                 </div>
