Center and shrink diagrams: use contain-fit with padding on project card images

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="thumb top" src="images/agentic-ai.png" alt="Agentic Jira parser" />
+                <img class="thumb contain" src="images/agentic-ai.png" alt="Agentic Jira parser" />
                 <h3>Agentic Jira Parser & PR Creator</h3>
                 <p class="comment-line">Parse tickets, plan edits, open PRs autonomously.</p>
                 <div class="tags">
@@ -87,7 +87,7 @@
                 </div>
             </div>
             <div class="card">
-                <img class="thumb top" src="images/preemptive_threading.png" alt="Pre‑emptive threading" />
+                <img class="thumb contain" src="images/preemptive_threading.png" alt="Pre‑emptive threading" />
                 <h3>Pre‑emptive User‑Level Threading (C)</h3>
                 <p class="comment-line">Timer-driven preemption, scheduler, and sync primitives.</p>
                 <div class="tags">
